[project]
name = "llamachat-backend"
version = "0.1.0"
description = "My custom llama-stack distribution descriptor file"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chardet>=7.1.0",
    "chromadb>=1.5.5",
    "faiss-cpu>=1.13.2",
    "llama-stack==0.6.0",
    "llama-stack-api==0.6.0",
    "ollama>=0.6.1",
    "pypdf>=6.9.0",
    "torch>=2.10.0",
]
